--- a/css/styles.css
+++ b/css/styles.css
@@ -676,16 +676,21 @@ body {
 
 /* Next participant */
 #participant-42 {
-  background-color: white;
+  /* background-color: #FFA6B7; */
+  background-image: linear-gradient(to top, #6ef7d0 0%, #72afd3 100%);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 12px;
+  border: 2px solid #49c5ee;
 }
 #participant-42 .profile-photo {
-  background-image: url("../images/participant-photo.png");
+  background-image: url("https://s.isanook.com/ns/0/ui/1887/9438646/chomismaterialgirl_1718354077257.jpeg");
 }
 #participant-42 .participant-name::before {
   content: "42_Thipwimon";
 }
 #participant-42 .participant-quote::before {
-  /* content: "Your inspirational quote here." */
+  content: "Work hard in silence and let success be your noise."
 }
 
 /* Next participant */
