--- a/css/styles.css
+++ b/css/styles.css
@@ -822,7 +822,7 @@ body {
 	background-image: url("../images/participant-photo.png");
 }
 #participant-44 .participant-name::before {
-  content: "44_Warissara"; 
+  content: "44_Warissara";
 }
 #participant-44 .participant-quote::before {
 	/* content: "Your inspirational quote here." */
@@ -830,16 +830,25 @@ body {
 
 /* Next participant */
 #participant-45 {
-	background-color: white;
+	background-color: rgb(249, 57, 153);
+	border-top-left-radius: 24px;
+	border:3px solid orange;
+	box-shadow: 3px 3px #333;
 }
 #participant-45 .profile-photo {
-	background-image: url("../images/participant-photo.png");
+	background-image:
+	url("https://cdn.dribbble.com/userupload/25258373/file/original-c1fa8be007b47ba90d905d6b13672c83.gif");
+	border-color: orange;
 }
 #participant-45 .participant-name::before {
   content: "45_Worapon(EM)";
+  color: #333;
+  text-shadow: 0 -2px orange;
 }
 #participant-45 .participant-quote::before {
-	/* content: "Your inspirational quote here." */
+	content: "Make Noise";
+	color: #333;
+	text-shadow: 0 -2px orange;
 }
 
 /* Next participant */
