--- a/css/styles.css
+++ b/css/styles.css
@@ -438,7 +438,7 @@ body {
 
 /* Next participant */
 #participant-25 {
-  background-color: white;
+  /* background-color: #333; */
 }
 #participant-25 .profile-photo {
   background-image: url("../images/participant-photo.png");
